Bug 514280 - akonadi won't start mariadb with the default akonadiserverrc
Summary: akonadi won't start mariadb with the default akonadiserverrc
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 6.6.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-07 14:54 UTC by Paul Worrall
Modified: 2026-01-07 21:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2026-01-07 14:54:00 UTC
SUMMARY
The default akonadiserverrc created on my system has a line:

ServerPath=/usr/bin/mariadb

I needed to change 'mariadb' to 'mariadbd' before akonadi would start

STEPS TO REPRODUCE
1. run `akonadictl start` for the first time

OBSERVED RESULT
❯ akonadictl start
org.kde.pim.akonadictl: Starting Akonadi Server...
org.kde.pim.akonadictl:    done.
Connecting to deprecated signal QDBusConnectionInterface::serviceOwnerChanged(QString,QString,QString)

~ 
❯ qt.qpa.services: Failed to register with host portal QDBusError("org.freedesktop.portal.Error.Failed", "Could not register app ID: App info not found for 'org.kde.akonadi_control'")
org.kde.pim.akonadiserver: Starting up the Akonadi Server...
org.kde.pim.akonadiserver: Failed to detect mysqld version!
org.kde.pim.akonadiserver: database server stopped unexpectedly
org.kde.pim.akonadiserver: Database process exited unexpectedly during initial connection!
org.kde.pim.akonadiserver: executable: "/usr/bin/mariadb"
org.kde.pim.akonadiserver: arguments: QList("--defaults-file=/home/paul/.local/share/akonadi/mysql.conf", "--datadir=/home/paul/.local/share/akonadi/db_data/", "--socket=/run/user/1000/akonadi/mysql.socket", "--pid-file=/run/user/1000/akonadi/mysql.pid")
org.kde.pim.akonadiserver: stdout: ""
org.kde.pim.akonadiserver: stderr: "/usr/bin/mariadb: unknown variable 'datadir=/home/paul/.local/share/akonadi/db_data/'\n/usr/bin/mariadb: unknown variable 'pid-file=/run/user/1000/akonadi/mysql.pid'\n"
org.kde.pim.akonadiserver: exit code: 7
org.kde.pim.akonadiserver: process error: "Unknown error"
org.kde.pim.akonadiserver: See "/home/paul/.local/share/akonadi/db_data/mysql.err" for more details
org.kde.pim.akonadiserver: Shutting down AkonadiServer...
org.kde.pim.akonadicontrol: Application '/usr/bin/akonadiserver' exited normally...

ADDITIONAL INFORMATION
Changing 'mariadb' to 'mariadbd' in the file `$HOME/.config/akonadi/akonadiserverrc` fixed the problem
Comment 1 Allen Winter 2026-01-07 15:15:54 UTC
looking at the current akonadi CMakeLists.txt , it definitely looks for mariadbd (and not mariadb)

I don't think there's anything we need to fix.

no idea how /usr/bin/mariadb ended up in your config file.
Comment 2 Antonio Rojas 2026-01-07 18:57:17 UTC
(In reply to Allen Winter from comment #1)

> no idea how /usr/bin/mariadb ended up in your config file.

Because that's the default value if mariadb was not found at build time

https://invent.kde.org/pim/akonadi/-/blob/v25.12.0/src/server/storage/dbconfigmysql.cpp?ref_type=tags#L106

This is inconsistent with the cmake code.
Comment 3 Bug Janitor Service 2026-01-07 19:39:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/akonadi/-/merge_requests/333
Comment 4 Allen Winter 2026-01-07 20:43:28 UTC
Git commit 07c4196d0a4f90dd56abd80afc870e2196b8505c by Allen Winter.
Committed on 07/01/2026 at 19:38.
Pushed by aacid into branch 'master'.

dbconfigmysql.cpp - fallback to "mariadbd", not "mariadb"
FIXED-IN: 6.6.1

M  +1    -1    src/server/storage/dbconfigmysql.cpp

https://invent.kde.org/pim/akonadi/-/commit/07c4196d0a4f90dd56abd80afc870e2196b8505c
Comment 5 Albert Astals Cid 2026-01-07 21:30:48 UTC
Git commit 6ebae31371afc23a4f0c91b3d69878dac428a136 by Albert Astals Cid, on behalf of Allen Winter.
Committed on 07/01/2026 at 21:30.
Pushed by aacid into branch 'release/25.12'.

dbconfigmysql.cpp - fallback to "mariadbd", not "mariadb"
FIXED-IN: 6.6.1
(cherry picked from commit 07c4196d0a4f90dd56abd80afc870e2196b8505c)

M  +1    -1    src/server/storage/dbconfigmysql.cpp

https://invent.kde.org/pim/akonadi/-/commit/6ebae31371afc23a4f0c91b3d69878dac428a136