dbconfigmysql.cpp - fallback to "mariadbd", not "mariadb"

BUG:514280
FIXED-IN: 6.6.1